--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -5,6 +5,7 @@
   /* width: 100vw;   */
   overflow-x: none;
   padding-top: 4rem;
+  padding-left: 2rem;
   /* height: 100vh; */
   /* background-color: var(--bg-gray); */
 }
