--- a/styles/viewClient.css
+++ b/styles/viewClient.css
@@ -6,9 +6,9 @@
 
 .addClient-body {
   display: flex;
-  width: 100vw;
+  /* width: 100vw; */
   max-width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   align-items: center;
   justify-content: center;
 }
@@ -39,7 +39,7 @@ main {
   justify-content: center;
   width: 100vw;
   background-color: var(--bg-gray);
-  height: 100vh;
+  /* height: 100vh; */
   padding-top: 6rem;
 }
 
@@ -134,4 +134,8 @@ label {
   font-size: 1.2rem;
   color: var(--text-dark) !important;
   font-weight: 600;
+}
+
+.table-list.second {
+  margin: 0;
 }
