--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-  --blue-light: #109cf1;
+  /* --blue-light: #109cf1; */
   --green-light: #2ed47a;
   --green-dark: #1e804a;
   --red-light: #ff3c5f;
