--- a/styles/listClients.css
+++ b/styles/listClients.css
@@ -19,7 +19,7 @@ body {
   height: 5vh;
   font-size: 0.8rem;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
 }
 
@@ -34,17 +34,17 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
 }
 
 .main-content {
   width: 80%;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   /* justify-content: center; */
-  margin-top: 5rem;
-  height: 100vh;
+  margin-top: 0rem;
+  /* height: 100vh; */
   flex-direction: column;
   gap: 1.5rem;
   margin-bottom: 1.5rem;
