--- a/styles/prkSection.css
+++ b/styles/prkSection.css
@@ -78,7 +78,8 @@ main {
 .box2 {
   width: 50%;
   background-color: var(--text-light);
-  /* height: 100%; */
+  height: 85vh;
+
   border-radius: 5px;
 }
 
