--- a/styles/listVehicles.css
+++ b/styles/listVehicles.css
@@ -90,6 +90,7 @@ main {
   background-color: var(--text-light);
   padding: 2rem;
   border-radius: 5px;
+  min-height: 70vh;
 }
 
 .table-list table {
